--- a/src/pages/facilities.astro
+++ b/src/pages/facilities.astro
@@ -86,7 +86,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
             定期的な清掃で常に清潔な状態を保っています。
           </p>
           <ul class="facility-features">
-            <li>シャワー・バスタブ</li>
+            <li>シャワー</li>
             <li>洗面台</li>
             <li>定期清掃サービス</li>
             <li>十分な収納スペース</li>
